# alttab

./: .gitattributes  .gitignore  CMakeLists.txt  COPYING  ChangeLog  INSTALL.md  Makefile.am  Makefile.in  README  README.html  README.md  aclocal.m4  alttab-1.0.3.tar.gz.asc  alttab-1.1.0.tar.gz.asc  alttab-1.2.0.tar.gz.asc  alttab-1.3.0.tar.gz.asc  alttab-1.4.0.tar.gz.asc  alttab-1.5.0.tar.gz.asc  alttab-1.6.0.tar.gz.asc  alttab-1.6.1.tar.gz.asc  alttab-1.7.0.tar.gz.asc  alttab-1.7.1.tar.gz.asc  bootstrap.sh  config.h.in  configure  configure.ac  grid.css  index.html
.github/workflows/: c-cpp.yml
debian/: changelog  control  copyright  rules  watch
debian/patches/: 0001-dh11-to-10.patch  0001-disable-setjmp-check.patch  0002-avoid-dl_count-not-found-error.patch  series
debian/source/: options
debian/upstream/: metadata  signing-key.asc
doc/: CMakeLists.txt  Makefile.am  Makefile.in  README  alttab.1  alttab.1.html  alttab.1.ronn  alttab.1.txt  alttab.ad  development.md  icons.md  mobile.md  wm-setup.md  xmonad.md
doc/screenshots/: screenshots.md  screenshots.txt
src/: CMakeLists.txt  Makefile.am  Makefile.in  alttab.c  alttab.h  autil.c  config.h.in  ewmh.c  gui.c  icon.c  icon.h  pngd.c  pngd.h  randr.c  rp.c  util.c  util.h  win.c  x.c
test/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  pngtest.c  run-in-xvfb.test  run_tests.sh
