bin_PROGRAMS = alttab
alttab_SOURCES = alttab.c gui.c win.c x.c rp.c util.c ewmh.c icon.c pngd.c randr.c autil.c
AM_CFLAGS = $(x11_CFLAGS) $(xft_CFLAGS) $(xrender_CFLAGS) $(xrandr_CFLAGS) $(libpng_CFLAGS) $(fts_CFLAGS) $(xpm_CFLAGS) -Wall
LIBS += $(x11_LIBS) $(xft_LIBS) $(xrender_LIBS) $(xrandr_LIBS) $(libpng_LIBS) $(fts_LIBS) $(xpm_LIBS)
